Added link to GitHub code repo

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ SPDX-License-Identifier: Apache-2.0-->
         <div class="row">
           <div class="col-xl-8 col-sm-6 my-3">
             This is a city-scale agent-based simulator for the city of Bengaluru. 
-            It has been built to study the spread of COVID-19 in an Indian city.
+            It has been built to study the spread of COVID-19 in an Indian city. The open-source code for the simulator is available at <a target="_blank" href="https://github.com/cni-iisc/epidemic-simulator">https://github.com/cni-iisc/epidemic-simulator</a>.
             Details of our implementation can be found 
             <A target="_blank" HREF="https://covid19.iisc.ac.in/modeling-of-epidemic-spread-in-indian-urban-conditions/">
                 here</A>.
